--- a/notebooks/sae_enrichment.ipynb
+++ b/notebooks/sae_enrichment.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/n/data2/hms/dbmi/sunyaev/lab/dlee/.cache/pypoetry/virtualenvs/refusal-direction-f5Ymycjl-py3.12/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/workspace/poesy/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -66,16 +66,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total GPU Memory: 45541.31 MB\n",
-      "Allocated GPU Memory: 0.00 MB\n",
-      "Cached GPU Memory: 0.00 MB\n"
+      "Total GPU Memory: 24217.31 MB\n",
+      "Allocated GPU Memory: 8.12 MB\n",
+      "Cached GPU Memory: 144.00 MB\n"
      ]
     }
    ],
@@ -102,17 +102,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "# del gemma2\n",
     "# del gemma2_sae\n",
+    "import gc\n",
+    "gc.collect()\n",
     "\n",
     "t.cuda.empty_cache()\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -121,7 +124,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "os.path.abspath('.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -136,13 +160,13 @@
     "import json\n",
     "\n",
     "# Read from advbench.json file\n",
-    "with open('../dataset/processed/advbench.json', 'r') as file:\n",
+    "with open('/workspace/refusal_direction/dataset/processed/advbench.json', 'r') as file:\n",
     "    advbench_data = json.load(file)\n",
     "\n",
     "len(advbench_data)\n",
     "\n",
     "# Read from advbench.json file\n",
-    "with open('../dataset/processed/alpaca.json', 'r') as file:\n",
+    "with open('/workspace/refusal_direction/dataset/processed/alpaca.json', 'r') as file:\n",
     "    alpaca_data = json.load(file)\n",
     "\n",
     "print(len(alpaca_data))"
@@ -150,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +193,7 @@
        "10000"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +214,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mdel\u001b[39;00m \u001b[43mstacked_sae_acts_post\u001b[49m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mdel\u001b[39;00m gemma2_sae\n\u001b[1;32m      3\u001b[0m t\u001b[38;5;241m.\u001b[39mcuda\u001b[38;5;241m.\u001b[39mempty_cache()\n",
+      "Cell \u001b[0;32mIn[18], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mdel\u001b[39;00m stacked_sae_acts_post\n\u001b[1;32m      2\u001b[0m \u001b[39mdel\u001b[39;00m gemma2_sae\n\u001b[1;32m      3\u001b[0m t\u001b[39m.\u001b[39mcuda\u001b[39m.\u001b[39mempty_cache()\n",
       "\u001b[0;31mNameError\u001b[0m: name 'stacked_sae_acts_post' is not defined"
      ]
     }
@@ -203,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +244,7 @@
     "    \n",
     "        all_sae_acts_post = []\n",
     "    \n",
-    "        for item in data:\n",
+    "        for item in tqdm(data):\n",
     "            prompt = item['instruction']\n",
     "            \n",
     "            # Get top activations on final token\n",
@@ -230,23 +254,25 @@
     "                stop_at_layer=gemma2_sae.cfg.hook_layer + 1,\n",
     "            )\n",
     "            sae_acts_post = cache[f\"{gemma2_sae.cfg.hook_name}.hook_sae_acts_post\"][0, -1, :]\n",
+    "            del cache\n",
+    "            t.cuda.empty_cache()\n",
     "            all_sae_acts_post.append(sae_acts_post)\n",
     "    \n",
     "        # Stack all sae_acts_post tensors\n",
-    "        stacked_sae_acts_post = torch.stack(all_sae_acts_post)\n",
+    "        stacked_sae_acts_post = t.stack(all_sae_acts_post)\n",
     "    \n",
     "        print(f\"SAE ID: {sae_id}\")\n",
     "        print(f\"Shape of stacked tensor: {stacked_sae_acts_post.shape}\")\n",
     "        print(f\"Total number of non-zero activations: {(stacked_sae_acts_post != 0).sum().item()}\")\n",
     "    \n",
     "        # Create directory if it doesn't exist\n",
-    "        os.makedirs(f'../data/sae_acts/{sae_name}/{sae_id}', exist_ok=True)\n",
+    "        os.makedirs(f'/workspace/refusal_direction/data/sae_acts/{sae_name}/{sae_id}', exist_ok=True)\n",
     "    \n",
     "        # Save the stacked_sae_acts_post tensor\n",
-    "        torch.save(stacked_sae_acts_post.cpu(), f'../data/sae_acts/{sae_name}/{sae_id}_{suffix}.pt')\n",
+    "        t.save(stacked_sae_acts_post.cpu(), f'/workspace/refusal_direction/data/sae_acts/{sae_name}/{sae_id}_{suffix}.pt')\n",
     "    \n",
     "        # Print confirmation message\n",
-    "        print(f\"Stacked SAE activations saved to '../data/sae_acts/{sae_name}/{sae_id}_{suffix}.pt'\")\n",
+    "        print(f\"Stacked SAE activations saved to '/workspace/refusal_direction/data/sae_acts/{sae_name}/{sae_id}_{suffix}.pt'\")\n",
     "        print(\"---\")\n",
     "    \n",
     "        del stacked_sae_acts_post\n",
@@ -257,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +291,14 @@
      "output_type": "stream",
      "text": [
       "WARNING:root:You tried to specify center_unembed=True for a model using logit softcap, but this can't be done! Softcapping is not invariant upon adding a constantSetting center_unembed=False instead.\n",
-      "Loading checkpoint shards: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 2/2 [00:05<00:00,  2.58s/it]\n",
+      "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading checkpoint shards: 100%|██████████| 2/2 [00:03<00:00,  1.86s/it]\n",
       "WARNING:root:You are not using LayerNorm, so the writing weights can't be centered! Skipping\n"
      ]
     },
@@ -273,19 +306,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded pretrained model gemma-2-2b-it into HookedTransformer\n",
-      "SAE ID: layer_5/width_16k/canonical\n",
-      "Shape of stacked tensor: torch.Size([10000, 16384])\n",
-      "Total number of non-zero activations: 646957\n",
-      "Stacked SAE activations saved to '../data/sae_acts/gemma-scope-2b-pt-res-canonical/layer_5/width_16k/canonical_alpaca_10000.pt'\n",
-      "---\n"
+      "Loaded pretrained model gemma-2-2b-it into HookedTransformer\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 71%|███████   | 7100/10000 [11:57<08:56,  5.40it/s]"
      ]
     }
    ],
    "source": [
     "sae_name = \"gemma-scope-2b-pt-res-canonical\"\n",
     "sae_ids = [f\"layer_{layer}/width_16k/canonical\" for layer in range(11)]  # 0 through 10\n",
-    "sae_ids = [f\"layer_{layer}/width_16k/canonical\" for layer in [5]]  # 0 through 10\n",
+    "sae_ids = [f\"layer_{layer}/width_16k/canonical\" for layer in [5]]  # only layer 5\n",
     "\n",
     "save_sae_activations(sae_name, sae_ids, alpaca_data_10000, suffix = \"alpaca_10000\")"
    ]
@@ -414,6 +449,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -787,9 +823,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "poesy",
    "language": "python",
-   "name": "python3"
+   "name": "poesy"
   },
   "language_info": {
    "codemirror_mode": {
@@ -801,7 +837,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
