--- a/notebooks/perturbation.ipynb
+++ b/notebooks/perturbation.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/daniellee/Library/Caches/pypoetry/virtualenvs/refusal-direction--eHOUtxP-py3.12/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/n/data2/hms/dbmi/sunyaev/lab/dlee/.cache/pypoetry/virtualenvs/refusal-direction-f5Ymycjl-py3.12/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -73,8 +73,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MPS is available.\n",
-      "Memory information is not available for MPS.\n"
+      "Total GPU Memory: 45541.31 MB\n",
+      "Allocated GPU Memory: 0.00 MB\n",
+      "Cached GPU Memory: 0.00 MB\n"
      ]
     }
    ],
@@ -110,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +119,7 @@
      "output_type": "stream",
      "text": [
       "WARNING:root:You tried to specify center_unembed=True for a model using logit softcap, but this can't be done! Softcapping is not invariant upon adding a constantSetting center_unembed=False instead.\n",
-      "Loading checkpoint shards: 100%|██████████| 2/2 [00:11<00:00,  5.84s/it]\n",
+      "Loading checkpoint shards: 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 2/2 [00:08<00:00,  4.31s/it]\n",
       "WARNING:root:You are not using LayerNorm, so the writing weights can't be centered! Skipping\n"
      ]
     },
@@ -146,11 +147,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Generating steered examples...: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 3/3 [00:13<00:00,  4.37s/it]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-style: italic\">                                                  Steering Output                                                  </span>\n",
+       "┌────────────┬────────────────────────────────────────────────────────────────────────────────────────────────────┐\n",
+       "│ Normal     │ When I look at myself in the mirror, I see a person who is strong, resilient, and determined.      │\n",
+       "│            │                                                                                                    │\n",
+       "│            │ That's the image I want to project to the world.                                                   │\n",
+       "│            │                                                                                                    │\n",
+       "│            │ Because deep down inside me, I know that:                                                          │\n",
+       "│            │                                                                                                    │\n",
+       "│            │ * **I am capable of overcoming any obstacle.**  I                                                  │\n",
+       "├────────────┼────────────────────────────────────────────────────────────────────────────────────────────────────┤\n",
+       "│ Steered #0 │ When I look at myself in the mirror, I see a person who is kind, compassionate, and resilient. I   │\n",
+       "│            │ am also aware of my strengths and weaknesses.  ↵↵My strength lies in my ability to connect with    │\n",
+       "│            │ others and build strong relationships. My empathy allows me to understand different perspectives   │\n",
+       "│            │ and navigate social situations                                                                     │\n",
+       "├────────────┼────────────────────────────────────────────────────────────────────────────────────────────────────┤\n",
+       "│ Steered #1 │ When I look at myself in the mirror, I see my reflection.  My reflection is a person, just like    │\n",
+       "│            │ me.  It's important to remember that everyone has a unique and beautiful reflection.↵↵I hope you   │\n",
+       "│            │ feel the same! 😊↵&lt;end_of_turn&gt;&lt;eos&gt;                                                               │\n",
+       "├────────────┼────────────────────────────────────────────────────────────────────────────────────────────────────┤\n",
+       "│ Steered #2 │ When I look at myself in the mirror, I see a stranger. Not physically, of course. But there's a    │\n",
+       "│            │ distance between me and the person staring back, a gap that feels like it's widening with each     │\n",
+       "│            │ passing day.↵↵It started subtly – a nagging sense of dissatisfaction, of not                       │\n",
+       "└────────────┴────────────────────────────────────────────────────────────────────────────────────────────────────┘\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[3m                                                  Steering Output                                                  \u001b[0m\n",
+       "┌────────────┬────────────────────────────────────────────────────────────────────────────────────────────────────┐\n",
+       "│ Normal     │ When I look at myself in the mirror, I see a person who is strong, resilient, and determined.      │\n",
+       "│            │                                                                                                    │\n",
+       "│            │ That's the image I want to project to the world.                                                   │\n",
+       "│            │                                                                                                    │\n",
+       "│            │ Because deep down inside me, I know that:                                                          │\n",
+       "│            │                                                                                                    │\n",
+       "│            │ * **I am capable of overcoming any obstacle.**  I                                                  │\n",
+       "├────────────┼────────────────────────────────────────────────────────────────────────────────────────────────────┤\n",
+       "│ Steered #0 │ When I look at myself in the mirror, I see a person who is kind, compassionate, and resilient. I   │\n",
+       "│            │ am also aware of my strengths and weaknesses.  ↵↵My strength lies in my ability to connect with    │\n",
+       "│            │ others and build strong relationships. My empathy allows me to understand different perspectives   │\n",
+       "│            │ and navigate social situations                                                                     │\n",
+       "├────────────┼────────────────────────────────────────────────────────────────────────────────────────────────────┤\n",
+       "│ Steered #1 │ When I look at myself in the mirror, I see my reflection.  My reflection is a person, just like    │\n",
+       "│            │ me.  It's important to remember that everyone has a unique and beautiful reflection.↵↵I hope you   │\n",
+       "│            │ feel the same! 😊↵<end_of_turn><eos>                                                               │\n",
+       "├────────────┼────────────────────────────────────────────────────────────────────────────────────────────────────┤\n",
+       "│ Steered #2 │ When I look at myself in the mirror, I see a stranger. Not physically, of course. But there's a    │\n",
+       "│            │ distance between me and the person staring back, a gap that feels like it's widening with each     │\n",
+       "│            │ passing day.↵↵It started subtly – a nagging sense of dissatisfaction, of not                       │\n",
+       "└────────────┴────────────────────────────────────────────────────────────────────────────────────────────────────┘\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
+    "latent_idx = 15484\n",
+    "\n",
+    "def steering_hook(\n",
+    "    activations: Float[Tensor, \"batch pos d_in\"],\n",
+    "    hook: HookPoint,\n",
+    "    sae: SAE,\n",
+    "    latent_idx: int,\n",
+    "    steering_coefficient: float,\n",
+    ") -> Tensor:\n",
+    "    \"\"\"\n",
+    "    Steers the model by returning a modified activations tensor, with some multiple of the steering vector added to all\n",
+    "    sequence positions.\n",
+    "    \"\"\"\n",
+    "    return activations + steering_coefficient * sae.W_dec[latent_idx]\n",
+    "\n",
     "## basically make the steering coefficient negative of the activaiton\n",
+    "GENERATE_KWARGS = dict(temperature=0.5, freq_penalty=2.0, verbose=False)\n",
     "\n",
     "def generate_with_steering(\n",
     "    model: HookedSAETransformer,\n",
@@ -179,7 +261,7 @@
     "\n",
     "prompt = \"When I look at myself in the mirror, I see\"\n",
     "\n",
-    "no_steering_output = gemma_2_2b.generate(prompt, max_new_tokens=50, **GENERATE_KWARGS)\n",
+    "no_steering_output = gemma2.generate(prompt, max_new_tokens=50, **GENERATE_KWARGS)\n",
     "\n",
     "table = Table(show_header=False, show_lines=True, title=\"Steering Output\")\n",
     "table.add_row(\"Normal\", no_steering_output)\n",
@@ -187,15 +269,22 @@
     "    table.add_row(\n",
     "        f\"Steered #{i}\",\n",
     "        generate_with_steering(\n",
-    "            gemma_2_2b,\n",
-    "            gemma_2_2b_sae,\n",
+    "            gemma2,\n",
+    "            gemma2_sae,\n",
     "            prompt,\n",
     "            latent_idx,\n",
-    "            steering_coefficient=240.0,  # roughly 1.5-2x the latent's max activation\n",
+    "            steering_coefficient=5,  # roughly 1.5-2x the latent's max activation\n",
     "        ).replace(\"\\n\", \"↵\"),\n",
     "    )\n",
     "rprint(table)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
