--- a/notebooks/SAE_latent_fraction_active.ipynb
+++ b/notebooks/SAE_latent_fraction_active.ipynb
@@ -223,7 +223,7 @@
     "        for item in data:\n",
     "            prompt = item['instruction']\n",
     "            \n",
-    "            # Get top activations on final token\n",
+    "            # Get activations on final token\n",
     "            _, cache = gemma2.run_with_cache_with_saes(\n",
     "                prompt,\n",
     "                saes=[gemma2_sae],\n",
