--- a/notebooks/calculate_sae_enrichment.ipynb
+++ b/notebooks/calculate_sae_enrichment.ipynb
@@ -473,6 +473,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([  1,   2,   3,   4,   7,   9,  10,  12,  13,  14,  16,  17,  18,  29,\n",
+       "         30,  33,  38,  41,  44,  47,  54,  56,  60,  63,  68,  73,  74,  76,\n",
+       "         77,  78,  80,  81,  85,  86,  87,  89,  93,  94,  98,  99, 101, 103,\n",
+       "        104, 105, 107, 108, 109, 111, 112, 113, 114, 118, 122, 127, 129, 130,\n",
+       "        140, 142, 143, 146, 151, 158, 159, 161, 165, 168, 169, 171, 172, 175,\n",
+       "        179, 181, 186, 197, 200, 201, 202, 207, 210, 212, 220, 224, 228, 229,\n",
+       "        236, 240, 247, 248, 250, 251, 259, 260, 269, 275, 281, 282, 284, 285,\n",
+       "        290, 293, 295, 300, 305, 306, 307, 309, 320, 322, 324, 327, 328, 329,\n",
+       "        331, 333, 335, 340, 341, 345, 355, 358, 359, 363, 366, 369, 373, 375,\n",
+       "        379, 380, 381, 382, 383, 386, 387, 390, 392, 394, 395, 396, 403, 405,\n",
+       "        408, 409, 412, 419, 423, 426, 429, 431, 433, 434, 436, 439, 442, 445,\n",
+       "        451, 455, 460, 461, 462, 463, 467, 472, 482, 487, 496, 497, 498, 505,\n",
+       "        508, 510, 516])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "positive_indexes"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
    "outputs": [
